@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Refactor the module path for suuport future versions. Added recordsets support
+
 0.1.0
 -----
 
